2002-02-22  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/Makefile.in: Add viewmol.o.

	* src/viewmol.cpp: New code to read/write ViewMol files as ported
	from the GPL'ed patch sent by J?rg-R?diger Hill.

	* src/data.h, src/data.cpp, src/extable.txt, src/extable.h: Add
	ViewMol format and enable Chem3D and derived formats.

	* src/c3d.cpp: Clean up Read methods to match normal declarations.

	* src/fileformat.h, src/fileformat.cpp: Enable Read/Write for
	Chem3d1, Chem3d2, Mmads and ViewMol formats.

	* src/main.cpp: Add support for using '--' to read from STDIN and
	output to STDOUT. Tackles request #519085.
	
2002-02-17  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* README, configure.in, configure: Update for next snapshot of
	1.99.1.

	* src/Makefile.in: Add -I(builddir) to ensure that
	configure-generated version.h is included.

	* src/alchemy.cpp, src/amber.cpp, src/balst.cpp, src/box.cpp,
	src/cacao.cpp, src/car.cpp, src/ccc.cpp, src/dmol.cpp,
	src/feat.cpp, src/gamess.cpp, src/gaussian.cpp, src/hin.cpp,
	src/jaguar.cpp, src/mopac.cpp, src/mpqc.cpp, src/nwchem.cpp,
	src/qchem.cpp, src/report.cpp, src/unichem.cpp, src/xyz.cpp:
	Make sure that SetTitle() is called with the default title if the
	format doesn't have a title, do not set atom types unless the
	format supports them (the internal atom typer is better), and for
	formats without bond information, call the new
	mol.PerceiveBondOrders() method.

	* src/mol.h, src/mol.cpp: Rename PerceiveBonds in favor of
	more accurate PerceiveBondOrders(). Make sure that
	auto-hybridization is turned off while bond orders are being
	perceived and then let it run afterwards.
	
2002-02-16  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/mol.cpp (PerceiveBonds): Improve accuracy by picking the
	closer atom (shorter bond) when there are two atoms with equal
	electronegativities.

	* src/main.cpp: Add -v flag to give version information but not
	the whole usage report.
	